--- a/1-html-structure-semantics/index.html
+++ b/1-html-structure-semantics/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="css/1semantics.css" rel="stylesheet">
     <title>Quotes from American Transcendalists</title>
 </head>
 <body>
